--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="CS360 - Project 9/src"/>
 	<classpathentry kind="src" path="files"/>
+	<classpathentry kind="src" path="Testing"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="CS360 - Project 9/bin"/>
 </classpath>
